final teste viewport

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes, maximum-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes">
     <title>Registration form</title>
     <link rel="icon" type="image/icon-logo" href="./images/logo-navegador.png">
     <!-- Ícone da página exibido na aba do navegador -->
