Mudança no footer

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <footer id="footer">
         <!-- Rodapé da página -->
         <p>
-            2024 &copy; Desenvolvido por Luan Rodrigues - Todos os direitos reservados
+            &copy; - Desenvolvido por <u>Luan Rodrigues</u> - Aluno (Full Stack Python - EBAC) 2024
         </p>
         <!-- Informação de copyright e créditos -->
     </footer>
